--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
   </script>
 </head>
 <body>
-  <div id="map_canvas" style="width:100%; height:90%"></div>
+  <div id="map_canvas" style="width:100%; height:70%"></div>
 
   <script type="text/x-handlebars">
-    {{#view App.MyView}}
-      <h1>Hello world!</h1>
-    {{/view}}
+  {{#view App.ListView}}
+  <ul>
+    {{#each content}}
+    <li>{{lat}}, {{lng}}
+    {{/each}}
+  </ul>
+  {{/view}}
   </script>
 
   <!-- The missing protocol means that it will match the current protocol, either http or https. If running locally, we use the local jQuery. -->
