--- a/index.html
+++ b/index.html
@@ -23,15 +23,33 @@
   </script>
 </head>
 <body>
-  <div id="map_canvas" style="width:100%; height:70%"></div>
+  <div id="map_canvas" style="width:100%; height:400px"></div>
 
   <script type="text/x-handlebars">
+  {{#view App.MarkerDetailView}}
+  <table>
+  <tr>
+  <td>{{content.latitude}}</td>
+  <td>{{content.longitude}}</td>
+  <td>
+  {{#if content}}
+  {{#view App.RemoveButtonView contentBinding="content"}}Remove{{/view}}
+  {{/if}}
+  </td>
+  </tr>
+  </table>
+  {{/view}}
+  <br>
   {{#view App.ListView}}
-  <ul>
+  <table>
+  <tr><th>Latitude</th><th>Longitude</th></tr>
     {{#each content}}
-    <li>{{lat}}, {{lng}}
+    {{#view App.MarkerListItemView contentBinding="this"}}
+    <td>{{content.latitude}}</td>
+    <td>{{content.longitude}}</td>
+    {{/view}}
     {{/each}}
-  </ul>
+  </table>
   {{/view}}
   </script>
 
